--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 
         <!-- header-top -->
         <section class="header-top margin-btm">
-            <div class="debug"></div>
+            <!-- <div class=" debug"> -->
+                <img id="logo" src="img/logo.png" alt="logo Neori">
+            <!-- </div> -->
+                <nav>
+                    <ul>
+                        <li>features</li>
+                        <li>editorials</li>
+                        <li>environment</li>
+                        <li>blog</li>
+                        <li>shop</li>
+                        <li>contact</li>
+                    </ul>
+                </nav>
+                
+
         </section>
         
         <!-- jumbotron -->
