--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- inizio header -->
-    <header>
+    <header class="margin-btm">
 
         <!-- header-top -->
         <section class="header-top margin-btm">
@@ -32,13 +32,13 @@
         
         <!-- jumbotron -->
         <section id="jumbo-cont" class="jumbotron">
-            <!-- <div class="debug"></div> -->
-            <div id="primo-titolo">Pretium ac placerat dui interdum nunc in eros urna morbi</div>
-            <div id="secondo-titolo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, voluptas? Iure placeat veniam est suscipit maiores in aspernatur, numquam nemo quos quis libero sit commodi magni eum minus itaque sapiente!</div>
-            
+            <!-- <div class="debug"> -->
+                <div id="primo-titolo">Pretium ac placerat dui interdum nunc in eros urna morbi</div>
+                <div id="secondo-titolo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, voluptas? Iure placeat veniam est suscipit maiores in aspernatur, numquam nemo quos quis libero sit commodi magni eum minus itaque sapiente!</div>
+            <!-- </div> -->
         </section>
 
-    </header class="margin-btm">
+    </header>
     <!-- fine header -->
 
     <!-- main -->
