--- a/index.html
+++ b/index.html
@@ -44,16 +44,22 @@
     <!-- main -->
     <main class=" margin-btm clearfix">
         <div class="top-content container margin-btm">
-            <div class="debug"></div>
+            <!-- <div class="debug"></div> -->
+            <h1>Leadership</h1>
+            <h3>Fertenun urna a libero tempus</h3>
         </div>
         <div class="content pad-btm left">
-            <div class="debug"></div>
+            <!-- <div class="debug"></div> -->
+            <div id="img1-container" class="container"></div>
+            
         </div>
         <div class="mid-content pad-btm left">
-            <div class="debug"></div>
+            <!-- <div class="debug"></div> -->
+            <div id="img2-container" class="container"></div>
         </div>
         <div class="content pad-btm left">
-            <div class="debug"></div>
+            <!-- <div class="debug"></div> -->
+            <div id="img3-container" class="container"></div>
         </div>
     </main>
     <!-- fine main -->
