--- a/index.html
+++ b/index.html
@@ -51,23 +51,38 @@
         <div class="content pad-btm left">
             <!-- <div class="debug"></div> -->
             <div id="img1-container" class="container"></div>
-            
+            <div>
+                <h2>Lorem</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis sequi accusamus commodi aliquam in repellendus laborum ratione ipsa delectus odit maxime suscipit maiores eum, eos et eaque nisi, voluptas enim.</p>
+            </div>
+
         </div>
         <div class="mid-content pad-btm left">
             <!-- <div class="debug"></div> -->
             <div id="img2-container" class="container"></div>
+            <div>
+                <h2>Ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi recusandae sit officia fuga voluptas fugiat voluptatum magnam aliquam deserunt culpa soluta maxime dolor modi, magni facilis ducimus provident. Quasi.
+                Itaque illum, perspiciatis tempore, quod facilis nihil nobis hic reprehenderit dolorum doloremque vel deleniti ipsum! Natus dicta aliquam, odio amet illo placeat modi fugit labore molestias quod delectus praesentium explicabo.
+                Nostrum vero delectus modi accusamus aliquam animi numquam accusantium ducimus earum rerum dicta, nam dolore praesentium quisquam, at, temporibus vel saepe aspernatur. Consectetur doloremque quisquam at commodi ad sed nemo.</p>
+            </div>
         </div>
         <div class="content pad-btm left">
             <!-- <div class="debug"></div> -->
             <div id="img3-container" class="container"></div>
+            <div>
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quisquam voluptatem adipisci ullam, inventore, doloribus omnis porro autem, ex fugit nostrum dolor veniam totam quos sint expedita eveniet facilis ad?</p>
+            </div>
         </div>
     </main>
     <!-- fine main -->
 
     <!-- footer -->
     <footer>
-        <div class="debug">
-        </div>
+        <!-- <div class="debug">
+        </div> -->
+        <h3>Designed with <span>&hearts;</span></h3>
     </footer>
     <!-- fine footer -->
 
