--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         <!-- jumbotron -->
         <section id="jumbo-cont" class="jumbotron">
             <!-- <div class="debug"> -->
-                <div id="primo-titolo">Pretium ac placerat dui interdum nunc in eros urna morbi</div>
-                <div id="secondo-titolo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, voluptas? Iure placeat veniam est suscipit maiores in aspernatur, numquam nemo quos quis libero sit commodi magni eum minus itaque sapiente!</div>
+                <div class="layover">
+                    <div id="primo-titolo"">Pretium ac placerat dui interdum nunc in eros urna morbi</div>
+                    <div id="secondo-titolo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, voluptas? Iure placeat veniam est suscipit maiores in aspernatur, numquam nemo quos quis libero sit commodi magni eum minus itaque sapiente!</div>
+                </div>
+                
             <!-- </div> -->
         </section>
 
@@ -50,7 +53,9 @@
         </div>
         <div class="content pad-btm left">
             <!-- <div class="debug"></div> -->
-            <div id="img1-container" class="container"></div>
+            <div id="img1-container" class="container">
+                <div class="layover"></div>
+            </div>
             <div>
                 <h2>Lorem</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis sequi accusamus commodi aliquam in repellendus laborum ratione ipsa delectus odit maxime suscipit maiores eum, eos et eaque nisi, voluptas enim.</p>
@@ -59,7 +64,9 @@
         </div>
         <div class="mid-content pad-btm left">
             <!-- <div class="debug"></div> -->
-            <div id="img2-container" class="container"></div>
+            <div id="img2-container" class="container">
+                <div class="layover"></div>
+            </div>
             <div>
                 <h2>Ipsum</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi recusandae sit officia fuga voluptas fugiat voluptatum magnam aliquam deserunt culpa soluta maxime dolor modi, magni facilis ducimus provident. Quasi.
@@ -69,7 +76,9 @@
         </div>
         <div class="content pad-btm left">
             <!-- <div class="debug"></div> -->
-            <div id="img3-container" class="container"></div>
+            <div id="img3-container" class="container">
+                <div class="layover"></div>
+            </div>
             <div>
                 <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quisquam voluptatem adipisci ullam, inventore, doloribus omnis porro autem, ex fugit nostrum dolor veniam totam quos sint expedita eveniet facilis ad?</p>
